k8s/auth.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: staging
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: 799440659939.dkr.ecr.us-east-1.amazonaws.com/auth
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              memory: 64Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 300m
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
  namespace: staging
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 3000
