k8s/orders-mongo.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-depl
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-mongo
  template:
    metadata:
      labels:
        app: orders-mongo
    spec:
      volumes:
        - name: mongo-persistent-storage
          # pointer to the configuration of HOW we want the mount to be implemented
          persistentVolumeClaim:
            claimName: orders-mongo-pvc
      containers:
        - name: orders-mongo
          image: mongo
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
---
apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-srv
  namespace: staging
spec:
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: orders-mongo
