k8s/orders.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
  namespace: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: 799440659939.dkr.ecr.us-east-1.amazonaws.com/orders
          imagePullPolicy: "Always"
          # readinessProbe:
          #   httpGet:
          #     path: /api/orders/test
          #     port: 3000
          #   initialDelaySeconds: 10
          #   periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
  namespace: staging
spec:
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: orders
