k8s/payment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: 799440659939.dkr.ecr.us-east-1.amazonaws.com/payment
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
  namespace: staging
spec:
  ports:
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIp
  selector:
    app: payments
