k8s/tickets-mongo.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-mongo-depl
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-mongo
  template:
    metadata:
      labels:
        app: payments-mongo
    spec:
      containers:
        - name: payments-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: payments-mongo-srv
  namespace: staging
spec:
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: payments-mongo
