k8s/tickets.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: 799440659939.dkr.ecr.us-east-1.amazonaws.com/tickets
          readinessProbe:
            httpGet:
              path: /api/orders/test
              port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
  namespace: staging
spec:
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: tickets
